src/objects/Loan_Account_History__c.object
<CustomObject>
    <fields>
        <fullName>Aging__c</fullName>
        <label>Aging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Loan Account History</relationshipLabel>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clear_Balance__c</fullName>
        <label>Clear Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Loan Account History</relationshipLabel>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursed_Amount__c</fullName>
        <label>Disbursed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursed_Date__c</fullName>
        <label>Disbursed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_Overdue__c</fullName>
        <label>Fees Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees_Remaining__c</fullName>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Installment_Date__c</fullName>
        <label>First Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Overdue__c</fullName>
        <label>Interest Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Remaining__c</fullName>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_on_Total_Overdue__c</fullName>
        <label>Interest on Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Installment_Date__c</fullName>
        <label>Last Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Account History</relationshipLabel>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Cycle_Number__c</fullName>
        <label>Loan Cycle Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Account History</relationshipLabel>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Purpose</label>
        <referenceTo>Loan_Purpose__c</referenceTo>
        <relationshipLabel>Loan Account History</relationshipLabel>
        <relationshipName>Loan_Account_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Installment_Date__c</fullName>
        <label>Next Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Installment_Date__c</fullName>
        <label>Previous Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Overdue__c</fullName>
        <label>Principal Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unclear_Balance__c</fullName>
        <label>Unclear Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Account History</label>
    <nameField>
        <displayFormat>LAHID-{0000000000}</displayFormat>
        <label>Loan Account History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Account History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>